--- a/.github/workflows/make-metadata.yml
+++ b/.github/workflows/make-metadata.yml
@@ -1,9 +1,9 @@
 name: 'make metadata test'
 on:
   # push
-  create:
-    branches:
-      - '*'
+  # create:
+  #   branches:
+  #     - '*'
 jobs:
   make-metadata:
     runs-on: ubuntu-latest
@@ -13,7 +13,7 @@ jobs:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       EDI_USERNAME: ${{ secrets.EDI_USERNAME }}
       EDI_PASSWORD: ${{ secrets.EDI_PASSWORD }}
-    steps: 
+    steps:
       - name: update package lists
         run: sudo apt-get --allow-releaseinfo-change update
       - uses: actions/checkout@v3
@@ -21,7 +21,7 @@ jobs:
           fetch-depth: 0
       - run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - uses: r-lib/actions/setup-pandoc@v2
-        with: 
+        with:
           pandoc-version: '2.17.1'
       - name: Print branch name
         run: |
