--- a/.github/workflows/make-metadata.yml
+++ b/.github/workflows/make-metadata.yml
@@ -1,9 +1,8 @@
 name: 'make metadata test'
-# on:
-  # push
-  # create:
-  #   branches:
-  #     - '*'
+on:
+  create:
+    branches:
+      - '*'
 jobs:
   make-metadata:
     runs-on: ubuntu-latest
